@@ -49,7 +49,7 @@ INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_rest
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultConsoleTimeFormat','HH:mm:ss','HH:mm:ss',1,0,'S','Default long time display format for GUI.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultDCIPollingInterval','60','60',1,0,'I','Default polling interval for newly created DCI (in seconds).');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultDCIRetentionTime','30','30',1,0,'I','Default retention time for newly created DCI (in days).');
-INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultEncryptionPolicy','1','1',1,1,'C','Set the default encryption policy for communications with agents.');
+INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultEncryptionPolicy','2','2',1,1,'C','Set the default encryption policy for communications with agents.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultInterfaceExpectedState','1','1',1,0,'C','Default expected state for new interface objects.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultMapBackgroundColor','0xffffff','0xffffff',1,0,'H','Default background color for new network map objects.');
 INSERT INTO config (var_name,var_value,default_value,is_visible,need_server_restart,data_type,description) VALUES ('DefaultSubnetMaskIPv4','24','24',1,0,'I','Default mask for synthetic IPv4 subnets.');
